fixed alignments for stats

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -317,8 +317,8 @@ h1 {
 }
 
 .stat {
-  font-size: 1.2em;
-  padding: 15px;
+  font-size: 2.5vh;
+  padding: 1vh;
   border: 2px ridge #FD4556;
   border-radius: 1rem;
   box-shadow: inset 0 0 10px #FD4556;
@@ -514,8 +514,8 @@ background: url("https://pbs.twimg.com/ext_tw_video_thumb/1248732574224207872/pu
   
   .stat {
     margin: 1vh;
-    font-size: 1.2em;
-    padding: 20px;
+    font-size: 2.5vh;
+    padding: 1vh;
     border: 2px ridge var(--red);
     border-radius: 1rem;
     box-shadow: inset 0 0 10px var(--red);
@@ -559,8 +559,8 @@ background: url("https://pbs.twimg.com/ext_tw_video_thumb/1248732574224207872/pu
   
   .stat {
     margin: 1vh;
-    font-size: 1.2em;
-    padding: 20px;
+    font-size: 2.5vh;
+    padding: 1vh;
     border: 2px ridge var(--red);
     border-radius: 1rem;
     box-shadow: inset 0 0 10px var(--red);
